package torreHanoi;

public class Colonna extends Pila {
    private Pila<Disco> t;

    private int dimensioneTorre;

    public Colonna(int dimensioneTorre){
        this.dimensioneTorre = dimensioneTorre;
    }
    public void stampaTorri(){

    }
}
